--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/giniling.html">Beef Giniling</a>
+    <a href="recipes/lechon-kawali.html">Lechon Kawali</a>
 </body>
 </html>
