--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1>Lasagna</h1>
     <img src="img/homemade-lasagna.webp" alt="Homemade Lasagna" width="500">
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
     <h2>Ingredients</h2>
